================

1.24 (unreleased)
-----------------

- SubRessort wird immer umgeschrieben, auch wenn es vorher einen ungültigen
  Wert hatte (#5431)

- Ungültige Ressorts und Unterressorts werden jetzt im CMS angezeigt (via
  #5431).

Technisches
+++++++++++

- ObjektReferenceWidget umgebaut damit die Suche integriert werden kann.

- Unterstüzung für `_p_changed` auf XML-Klassen.

1.23.2 (2009-06-18)
-------------------

- Repackaged 1.23.1 (setupools/svn 1.6 problem).

1.23.1 (2009-06-18)
-------------------

- Test-Skin repariert

- Tab-Resource-Library repariert

- ObjectPathAttributeProperty kann jetzt auch mit ContextualSources umgehen.

1.23 (2009-06-17)
-----------------

- Anfänge eines neuen Skins: Vivi. Tabs sehen schon besser aus.

- DragAndDrop: Wird ein Objekt gezogen gibt es keine besondere »Drag-Pane«
  mehr. Das gezogene Element wird direkt angezeigt.

- Beim veröffentlichen »oldstatus« nur setzen, wenn sich der Wert auch geändert
  hat.

- Sidebar ein/ausklappen mit expliziter Statusangabe anstatt mit umschalten
  (damit der CP-Editor es vernünftig einklappen kann).

- Statische Resourcen mit einem Hash in der URL versehen.

1.22.1 (2009-06-09)
-------------------

- ``with_staement`` wird durch die FunctionalDocFileSuite bereitgestellt.

1.22 (2009-06-08)
-----------------

- WebDAV-Sperren von Hintergrundprozessen dauern nur noch maximal 30 Sekunden.

- Bessere Fehlemeldung, wenn Checkout nicht funktioniert.

1.21.6 (2009-06-08)
-------------------

- Bilder sind wieder IImageTypes

- Logging-Fehler im XMLTypeGrokker behoben.

1.21.5 (2009-06-05)
-------------------

- FunctionalDocFileSuite statt der FunctionalBlobDocFileSuite aus zope.file
  benutzen, was mit ZODB 3.9 möglich wird und anders nicht funktioniert.

- Registrieren von Content-Type via Typdeklaration und Martian statt diverser
  ZCML-Statements.

1.21.4 (2009-05-31)
-------------------

- Fehler beim aktualisieren von Metadaten beim Veröffentlichen behoben.

1.21.3 (2009-05-28)